init HPCA 2025 demo

--- a/examples/1_1_install_janusq.ipynb
+++ b/examples/1_1_install_janusq.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Janus-CT"
+    "#### Test QuCT"
    ]
   },
   {
@@ -90,12 +90,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:02<00:00, 136.59it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 383.28it/s]\n"
      ]
     }
    ],
    "source": [
-    "# test janus-ct\n",
+    "# test quct\n",
     "from janusq.data_objects.backend import LinearBackend\n",
     "from janusq.data_objects.random_circuit import random_circuits\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Janus-FEM"
+    "#### Test QuFEM"
    ]
   },
   {
@@ -124,10 +124,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'110': 2, '101': 10, '011': 14, '100': 81, '001': 701, '010': 245, '000': 8947}, {'100': 1, '010': 5, '000': 118, '101': 91, '111': 4, '011': 222, '001': 9559}, {'110': 2, '101': 11, '011': 26, '100': 98, '001': 707, '010': 256, '000': 8900}, {'100': 3, '110': 86, '001': 44, '011': 612, '111': 12, '000': 566, '010': 8677}, {'110': 2, '101': 7, '000': 2, '010': 92, '001': 660, '111': 84, '011': 9153}, {'101': 1, '100': 4, '001': 43, '111': 6, '011': 636, '110': 75, '000': 581, '010': 8654}, {'101': 4, '110': 3, '011': 14, '100': 75, '001': 710, '010': 218, '000': 8976}, {'100': 2, '111': 1, '011': 259, '101': 99, '010': 4, '000': 118, '001': 9517}, {'101': 7, '110': 2, '011': 13, '100': 79, '001': 655, '010': 245, '000': 8999}, {'001': 56, '011': 1, '111': 15, '110': 193, '010': 15, '000': 885, '101': 657, '100': 8178}, {'010': 1, '000': 11, '100': 90, '001': 912, '011': 19, '111': 221, '101': 8746}, {'011': 1, '111': 17, '001': 62, '010': 24, '000': 880, '110': 199, '101': 607, '100': 8210}, {'101': 31, '100': 541, '001': 5, '011': 60, '111': 586, '110': 7895, '000': 64, '010': 818}, {'000': 1, '010': 8, '100': 5, '001': 56, '110': 97, '101': 579, '011': 890, '111': 8364}, {'001': 4, '101': 44, '100': 570, '011': 57, '111': 551, '000': 52, '010': 847, '110': 7875}, {'011': 1, '111': 11, '001': 70, '110': 232, '101': 600, '010': 19, '000': 895, '100': 8172}, {'110': 2, '000': 12, '100': 102, '001': 935, '011': 28, '111': 227, '101': 8694}, {'011': 2, '111': 23, '001': 54, '110': 215, '101': 583, '010': 25, '000': 873, '100': 8225}, {'110': 1, '101': 5, '011': 15, '100': 84, '001': 667, '010': 225, '000': 9003}, {'101': 92, '111': 3, '011': 219, '010': 3, '000': 117, '001': 9566}, {'110': 3, '011': 14, '100': 87, '101': 9, '001': 703, '010': 232, '000': 8952}, {'001': 43, '100': 5, '110': 77, '111': 1, '011': 662, '000': 566, '010': 8646}, {'101': 6, '100': 1, '001': 599, '000': 7, '010': 97, '111': 81, '011': 9209}, {'100': 3, '110': 91, '001': 46, '111': 7, '011': 631, '000': 589, '010': 8633}, {'101': 4, '110': 4, '011': 16, '100': 82, '001': 731, '010': 228, '000': 8935}, {'100': 1, '111': 2, '011': 272, '101': 97, '010': 1, '000': 118, '001': 9509}]\n"
+      "[{'111': 1, '011': 23, '110': 27, '001': 356, '100': 262, '101': 14, '010': 688, '000': 8629}, {'011': 685, '111': 24, '101': 269, '010': 37, '000': 497, '100': 16, '001': 8472}, {'101': 15, '110': 19, '100': 261, '001': 349, '111': 1, '011': 25, '010': 718, '000': 8612}, {'101': 1, '100': 10, '001': 14, '110': 301, '000': 402, '010': 8909, '111': 15, '011': 348}, {'101': 9, '011': 8819, '111': 280, '110': 21, '001': 382, '000': 27, '010': 462}, {'101': 1, '111': 5, '011': 373, '100': 8, '001': 16, '110': 279, '010': 8905, '000': 413}, {'011': 31, '101': 8, '100': 274, '001': 356, '110': 18, '010': 672, '000': 8641}, {'100': 14, '001': 8525, '000': 487, '010': 33, '101': 279, '111': 19, '011': 643}, {'101': 12, '110': 19, '100': 289, '001': 359, '111': 1, '011': 26, '010': 677, '000': 8617}, {'011': 7, '111': 24, '001': 30, '110': 654, '100': 8179, '010': 58, '000': 736, '101': 312}, {'011': 49, '111': 626, '110': 25, '001': 748, '100': 432, '010': 4, '000': 43, '101': 8073}, {'011': 1, '111': 25, '010': 51, '000': 752, '101': 331, '001': 23, '110': 644, '100': 8173}, {'101': 8, '011': 22, '111': 335, '110': 8416, '100': 363, '000': 29, '010': 827}, {'000': 2, '010': 34, '100': 20, '001': 31, '110': 446, '101': 326, '011': 784, '111': 8357}, {'101': 16, '001': 2, '110': 8416, '100': 385, '111': 331, '011': 37, '000': 26, '010': 787}, {'011': 3, '111': 23, '001': 27, '110': 690, '100': 8168, '010': 52, '000': 753, '101': 284}, {'010': 2, '000': 44, '011': 62, '111': 596, '100': 426, '001': 769, '110': 42, '101': 8059}, {'011': 7, '111': 14, '000': 741, '010': 71, '001': 37, '100': 8180, '110': 635, '101': 315}, {'101': 9, '100': 241, '110': 24, '001': 351, '011': 24, '010': 743, '000': 8608}, {'111': 23, '011': 658, '101': 293, '000': 445, '010': 37, '110': 1, '100': 15, '001': 8528}, {'110': 18, '001': 310, '100': 246, '011': 29, '101': 15, '010': 704, '000': 8678}, {'101': 1, '001': 12, '100': 16, '110': 273, '111': 13, '011': 350, '000': 373, '010': 8962}, {'101': 10, '011': 8760, '111': 292, '000': 19, '010': 523, '110': 16, '001': 380}, {'001': 17, '110': 288, '100': 10, '111': 12, '011': 325, '000': 376, '010': 8972}, {'101': 9, '110': 14, '001': 347, '100': 271, '011': 31, '000': 8647, '010': 681}, {'011': 689, '111': 19, '101': 264, '010': 38, '000': 481, '100': 12, '001': 8497}]\n"
      ]
     }
    ],
@@ -165,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Janus-SAT"
+    "#### Test HyQSAT"
    ]
   },
   {
@@ -193,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
