--- a/examples/2_1_vectorization.ipynb
+++ b/examples/2_1_vectorization.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vectorization Model Of Janus-CT\n",
+    "# Vectorization Model of QuCT\n",
     "**Author:** Siwei Tan  \n",
     "\n",
     "**Date:** 7/4/2024\n",
     "\n",
-    "Based on \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features (MICRO 2023][1]\"\n",
+    "Based on paper \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features][1]\" (MICRO 2023)\n",
     "\n",
-    "[1]: https://scholar.google.com/scholar_url?url=https://dl.acm.org/doi/abs/10.1145/3613424.3614274%3Fcasa_token%3DffjIB1hQ4ZwAAAAA:8MajDLrDOC74WoeMf7r7AoQ-koxCa4E1TNqQg3GSDz03xUX6XdE3toNTM-YdM_e4rKEusMceJ6BGJg&hl=zh-CN&sa=T&oi=gsb&ct=res&cd=0&d=11146218754516883150&ei=42YSZpPlFL6s6rQPtt6x6Ac&scisig=AFWwaeYaiu2hyx8HUJ_7Buf9Mwom\n",
+    "[1]: https://dl.acm.org/doi/10.1145/3613424.3614274\n",
     "\n",
-    "In the current Noisy Intermediate-Scale Quantum era, quantum circuit analysis is an essential technique for designing high-performance quantum programs. Current analysis methods exhibit either accuracy limitations or high computational complexity for obtaining precise results. To reduce this tradeoff, we propose Janus-CT, a unified framework for extracting, analyzing, and optimizing quantum circuits. The main innovation of Janus-CT is to vectorize each gate with each element, quantitatively describing the degree of the interaction with neighboring gates. Extending from the vectorization model, we can develope multiple downstream models for fidelity prediction and unitary decomposition, etc. In this tutorial, we introduce the APIs of the vectorization model of Janus-CT."
+    "In the current Noisy Intermediate-Scale Quantum era, quantum circuit analysis is an essential technique for designing high-performance quantum programs. Current analysis methods exhibit either accuracy limitations or high computational complexity for obtaining precise results. To reduce this tradeoff, we propose QuCT, a unified framework for extracting, analyzing, and optimizing quantum circuits. The main innovation of QuCT is to vectorize each gate with each element, quantitatively describing the degree of the interaction with neighboring gates. Extending from the vectorization model, we can develope multiple downstream models for fidelity prediction and unitary decomposition, etc. In this tutorial, we introduce the APIs of the vectorization model of QuCT."
    ]
   },
   {
@@ -47,7 +47,7 @@
     "Below is the workflow to vectorize a gate in the quantum circuit. The gate is vectorized by two steps. The first step runs random walks to extract circuit features in the neighbor of the gates. the second step use a table comparison to generate the gate vector.\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-1.feature_extraction.jpg\"  width=\"70%\" height=\"70%\">\n",
+    "    <img src=\"../picture/2_1_feature_extraction.jpg\"  width=\"70%\" height=\"70%\">\n",
     "</div>"
    ]
   },
@@ -68,26 +68,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌───────────────────┐ ░ ┌───────────────────┐ ░       ░       ░       ░ »\n",
-      "q_0: ┤ U(7π/5,6π/5,4π/5) ├─░─┤ U(6π/5,6π/5,4π/5) ├─░───────░───────░───■───░─»\n",
-      "     ├───────────────────┤ ░ └───────────────────┘ ░       ░       ░   │   ░ »\n",
-      "q_1: ┤ U(3π/5,2π/5,9π/5) ├─░───────────────────────░───────░───────░───┼───░─»\n",
-      "     ├───────────────────┤ ░                       ░       ░       ░ ┌─┴─┐ ░ »\n",
-      "q_2: ┤ U(6π/5,4π/5,2π/5) ├─░───────────■───────────░───■───░───■───░─┤ X ├─░─»\n",
-      "     ├───────────────────┤ ░         ┌─┴─┐         ░ ┌─┴─┐ ░ ┌─┴─┐ ░ └───┘ ░ »\n",
-      "q_3: ┤ U(2π/5,6π/5,3π/5) ├─░─────────┤ X ├─────────░─┤ X ├─░─┤ X ├─░───────░─»\n",
-      "     └───────────────────┘ ░         └───┘         ░ └───┘ ░ └───┘ ░       ░ »\n",
-      "«     ┌─────────────────┐ ░ \n",
-      "«q_0: ┤ U(4π/5,π/5,π/5) ├─░─\n",
-      "«     └─────────────────┘ ░ \n",
-      "«q_1: ────────────────────░─\n",
-      "«                         ░ \n",
-      "«q_2: ────────────────────░─\n",
-      "«                         ░ \n",
-      "«q_3: ────────────────────░─\n",
-      "«                         ░ \n",
+      "     ┌───────────────────┐ ░                  ░       ░       ░       ░ »\n",
+      "q_0: ┤ U(2π/5,4π/5,2π/5) ├─░──────────────────░───■───░───■───░───■───░─»\n",
+      "     └─┬───────────────┬─┘ ░ ┌──────────────┐ ░ ┌─┴─┐ ░ ┌─┴─┐ ░   │   ░ »\n",
+      "q_1: ──┤ U(9π/5,π,π/5) ├───░─┤ U(2π,π,7π/5) ├─░─┤ X ├─░─┤ X ├─░───┼───░─»\n",
+      "     ┌─┴───────────────┴─┐ ░ └──────────────┘ ░ └───┘ ░ └───┘ ░ ┌─┴─┐ ░ »\n",
+      "q_2: ┤ U(3π/5,π/10,7π/5) ├─░──────────────────░───────░───────░─┤ X ├─░─»\n",
+      "     └┬──────────────────┤ ░                  ░       ░       ░ └───┘ ░ »\n",
+      "q_3: ─┤ U(7π/5,π/5,6π/5) ├─░──────────────────░───────░───────░───────░─»\n",
+      "      └──────────────────┘ ░                  ░       ░       ░       ░ »\n",
+      "«     ┌───────────────────┐ ░ \n",
+      "«q_0: ┤ U(2π/5,2π/5,8π/5) ├─░─\n",
+      "«     └───────────────────┘ ░ \n",
+      "«q_1: ──────────────────────░─\n",
+      "«                           ░ \n",
+      "«q_2: ──────────■───────────░─\n",
+      "«             ┌─┴─┐         ░ \n",
+      "«q_3: ────────┤ X ├─────────░─\n",
+      "«             └───┘         ░ \n",
       "target gate: {'name': 'cx', 'qubits': [2, 3], 'params': []}\n",
-      "generate paths: {'cx,2,3-former-u,0-former-u,3', 'cx,2,3-former-u,0-former-u,0', 'cx,2,3-former-u,0-former-u,1', 'cx,2,3', 'cx,2,3-former-u,0-former-u,2', 'cx,2,3-former-u,0'}\n"
+      "generate paths: {'cx,2,3-former-cx,0,2-former-cx,0,1', 'cx,2,3-parallel-u,0-former-cx,0,2', 'cx,2,3-parallel-u,0', 'cx,2,3-former-cx,0,2-next-u,0', 'cx,2,3', 'cx,2,3-former-cx,0,2'}\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:01<00:00, 76.90it/s]\n"
+      "100%|██████████| 102/102 [00:00<00:00, 228.72it/s]\n"
      ]
     },
     {
@@ -180,8 +180,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0.  0.  0.5 0.  0.5 0.5 0.5 0.5 1.  0.  0.  0.  0.  0.  0.  0.5 0.  0.\n",
-      " 0.5 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "vector is [0.5 1.  0.5 0.  0.5 0.  0.5 0.5 0.  0.5 0.  0.  0.  0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
       " 0. ]\n"
      ]
     }
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4, 5, 6, 7, 8, 15, 18] = [2, 4, 5, 6, 15, 7, 8, 18]\n"
+      "[0, 1, 2, 4, 6, 7, 9] = [0, 1, 2, 4, 6, 7, 9]\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
    "metadata": {},
    "source": [
     "## Sub-circuit Reconstruction\n",
-    "The vectorization of JanusQ-CT also allows the reconstruction of the sub-circuit around the gate by its vector."
+    "The vectorization of QuCT also allows the reconstruction of the sub-circuit around the gate by its vector."
    ]
   },
   {
@@ -243,19 +243,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌─────────────────────────┐ ░            ░ \n",
-      "q_0: ┤ U(1.2358,1.3465,3.2028) ├─░────────────░─\n",
-      "     ├─────────────────────────┤ ░            ░ \n",
-      "q_1: ┤ U(14.281,6.7734,6.3467) ├─░────────■───░─\n",
-      "     └┬────────────────────────┤ ░        │   ░ \n",
-      "q_2: ─┤ U(3.5215,5.489,3.6705) ├─░───■────┼───░─\n",
-      "      ├────────────────────────┤ ░   │    │   ░ \n",
-      "q_3: ─┤ U(2.5136,3.6982,3.887) ├─░───┼────┼───░─\n",
-      "     ┌┴────────────────────────┤ ░   │  ┌─┴─┐ ░ \n",
-      "q_4: ┤ U(5.1685,3.8325,4.2732) ├─░───┼──┤ X ├─░─\n",
-      "     └─────────────────────────┘ ░ ┌─┴─┐└───┘ ░ \n",
-      "q_5: ────────────────────────────░─┤ X ├──────░─\n",
-      "                                 ░ └───┘      ░ \n"
+      "      ┌─────────────────────────┐  ░       ░ \n",
+      "q_0: ─┤ U(17.158,17.142,10.548) ├──░───────░─\n",
+      "      └┬───────────────────────┬┘  ░       ░ \n",
+      "q_1: ──┤ U(4.064,1.163,1.3467) ├───░───────░─\n",
+      "      ┌┴───────────────────────┴─┐ ░       ░ \n",
+      "q_2: ─┤ U(2.1857,0.21919,1.4346) ├─░───────░─\n",
+      "     ┌┴──────────────────────────┤ ░       ░ \n",
+      "q_3: ┤ U(2.8992,3.7818,0.082721) ├─░───────░─\n",
+      "     └┬─────────────────────────┬┘ ░       ░ \n",
+      "q_4: ─┤ U(5.0598,3.1813,2.3751) ├──░───■───░─\n",
+      "      ├─────────────────────────┤  ░ ┌─┴─┐ ░ \n",
+      "q_5: ─┤ U(5.7515,4.6988,4.7192) ├──░─┤ X ├─░─\n",
+      "      └─────────────────────────┘  ░ └───┘ ░ \n"
      ]
     }
    ],
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
