--- a/examples/2_2_fidelity_prediction_simulator.ipynb
+++ b/examples/2_2_fidelity_prediction_simulator.ipynb
@@ -4,37 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fidelity Prediction Of JanusQ-CT on Quantum Simualtor\n",
+    "# Fidelity Prediction of QuCT on Quantum Simulator\n",
     "\n",
-    "**Author:** Congliang Lang \\& Siwei Tan  \n",
+    "**Author:** Congliang Lang & Siwei Tan  \n",
     "\n",
     "**Date:** 7/4/2024\n",
     "\n",
-    "Based on \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features (MICRO 2023][1]\"\n",
+    "Based on paper \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features][1]\" (MICRO 2023)\n",
     "\n",
-    "[1]: https://scholar.google.com/scholar_url?url=https://dl.acm.org/doi/abs/10.1145/3613424.3614274%3Fcasa_token%3DffjIB1hQ4ZwAAAAA:8MajDLrDOC74WoeMf7r7AoQ-koxCa4E1TNqQg3GSDz03xUX6XdE3toNTM-YdM_e4rKEusMceJ6BGJg&hl=zh-CN&sa=T&oi=gsb&ct=res&cd=0&d=11146218754516883150&ei=42YSZpPlFL6s6rQPtt6x6Ac&scisig=AFWwaeYaiu2hyx8HUJ_7Buf9Mwom\n",
+    "[1]: https://dl.acm.org/doi/10.1145/3613424.3614274\n",
     "\n",
     "JanusQ enables an accurate fidelity prediction by considering the gate-dependent error (e.g. crosstalk and pulse distortion). Specifially, JanusQ uses a vectorization model to extract the topological and contextual information of circuits and intergate this information into the prediction. \n",
     "\n",
     "In this notebook, we introduce the fidelity prediction on the simulator. We also introduce the prediction on ther real world quantum device in the \"[2-3.fidelity_prediction_realqc.ipynb][2]\"\n",
     "\n",
-    "[2]: https://github.com/JanusQ/JanusQ/blob/main/janusq/examples/fidelity_prediction_18_qubit_realqc.ipynb\n"
+    "[2]: ./2-3.fidelity_prediction_realqc.ipynb\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-26 01:31:14,427\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 65519616 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-26 01:31:14,578\tINFO worker.py:1724 -- Started a local Ray instance.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import sys\n",
@@ -164,7 +155,7 @@
    "source": [
     "## Fidelity prediction\n",
     "\n",
-    "JanusQ-CT formulates the error $E$ of each gate as the dot-product between its vector $v_i$ and a weight vector $W$. The fidelity of the circuit $F_{circuit}$ is represented as the product of the gate fidelities (1 - gate error):\n",
+    "QuCT formulates the error $E$ of each gate as the dot-product between its vector $v_i$ and a weight vector $W$. The fidelity of the circuit $F_{circuit}$ is represented as the product of the gate fidelities (1 - gate error):\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
     "    & E(v_i) = W^\\top v_i, \\\\\n",
@@ -249,7 +240,7 @@
    "source": [
     "### Evaluate the Fidelity Prediction Model\n",
     "\n",
-    "JanusQ-CT is more accurate compared to previous method, such as the [random benchmarking][3]. We build a random benchmarking model to suggest that.\n",
+    "QuCT is more accurate compared to previous method, such as the [random benchmarking][3]. We build a random benchmarking model to suggest that.\n",
     "\n",
     "[3]: https://journals.aps.org/pra/abstract/10.1103/PhysRevA.77.012307"
    ]
@@ -339,18 +330,11 @@
     "fig_quct, axes_quct = plot_scatter(benchmarking_fidelities, janusct_fidelities, durations, title = f\"janusct inaccuracy = {np.abs(benchmarking_fidelities - janusct_fidelities).mean()}\")\n",
     "fig_rb, axes_rb = plot_scatter(benchmarking_fidelities, rb_fidelities, durations, title = f\"rb inaccuracy = {np.abs(benchmarking_fidelities - rb_fidelities).mean()}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
