--- a/examples/2_3_fidelity_prediction_realqc.ipynb
+++ b/examples/2_3_fidelity_prediction_realqc.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fidelity Prediction Of JanusQ-CT on Real Quantum Device\n",
+    "# Fidelity Prediction of QuCT on Real Quantum Device\n",
     "\n",
-    "**Author:** Congliang Lang \\& Siwei Tan  \n",
+    "**Author:** Congliang Lang & Siwei Tan  \n",
     "\n",
     "**Date:** 7/4/2024\n",
     "\n",
-    "Based on \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features (MICRO 2023][1]\"\n",
+    "Based on paper \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features][1]\" (MICRO 2023)\n",
     "\n",
-    "[1]: https://scholar.google.com/scholar_url?url=https://dl.acm.org/doi/abs/10.1145/3613424.3614274%3Fcasa_token%3DffjIB1hQ4ZwAAAAA:8MajDLrDOC74WoeMf7r7AoQ-koxCa4E1TNqQg3GSDz03xUX6XdE3toNTM-YdM_e4rKEusMceJ6BGJg&hl=zh-CN&sa=T&oi=gsb&ct=res&cd=0&d=11146218754516883150&ei=42YSZpPlFL6s6rQPtt6x6Ac&scisig=AFWwaeYaiu2hyx8HUJ_7Buf9Mwom\n",
+    "[1]: https://dl.acm.org/doi/10.1145/3613424.3614274\n",
     "\n",
     "\n",
-    "In this notebook, we use the fidelity dataset of a custom superconducting quantum devices to evaluate the fidelity prediction model of Janus-CT. This device is custom with 18 Xmon qubits arranged in a 6×3 grid qubit topology and use RX, RY, RZ, and CZ gates as basis gates, with gate times of 30 ns and 60 ns for single-qubit and two-qubit gates, respectively. The single-qubit gate fidelity, two-qubit fidelity and measurement are 99.97\\%, 99.16\\% and 94.91\\%, repsecitvely, are benchmarked by isolated RB. For simultaneous RB, the single-qubit and two-qubit fidelities of both devices are above 99\\% and 98\\%, respectively.\n",
+    "In this notebook, we use the fidelity dataset of a custom superconducting quantum devices to evaluate the fidelity prediction model of QuCT. This device is custom with 18 Xmon qubits arranged in a 6×3 grid qubit topology and use RX, RY, RZ, and CZ gates as basis gates, with gate times of 30 ns and 60 ns for single-qubit and two-qubit gates, respectively. The single-qubit gate fidelity, two-qubit fidelity and measurement are 99.97\\%, 99.16\\% and 94.91\\%, repsecitvely, are benchmarked by isolated RB. For simultaneous RB, the single-qubit and two-qubit fidelities of both devices are above 99\\% and 98\\%, respectively.\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-3.processor_topology.jpg\"  width=\"20%\" height=\"20%\">\n",
+    "    <img src=\"../picture/2_3_processor_topology.jpg\"  width=\"20%\" height=\"20%\">\n",
     "</div>"
    ]
   },
@@ -82,15 +82,8 @@
     "from janusq.dataset import real_qc_18bit\n",
     "\n",
     "circuits = real_qc_18bit\n",
-    "print(len(circuits))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(len(circuits))\n",
+    "\n",
     "# limit the number of circuits to speedup the model construction\n",
     "# circuits = circuits[:200]"
    ]
@@ -125,7 +118,7 @@
     "A large amount of zero-valued fidelities means less valid information, which negatively affects the training convergence and the model accuracy. For large-scale quantum device, e.g., 18-qubit device, we use seperable circuits to pervent the final fidelity from vanishing to zero due to a large number of gates. To address this, the separable circuits used in the fidelity dataset restrict the entangled qubits into sub-circuits within a small number of qubits.\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-3.lagre_fidelity.jpg\"  width=\"40%\" height=\"40%\">\n",
+    "    <img src=\"../picture/2_3_large_fidelity.jpg\"  width=\"40%\" height=\"40%\">\n",
     "</div>"
    ]
   },
@@ -239,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Janus-CT can also evaluate the weight of each path to identify high source of error. For example, when two gates leads to high error when they are in the same layer. It may result from crosstalk."
+    "QuCT can also evaluate the weight of each path to identify high source of error. For example, when two gates leads to high error when they are in the same layer. It may result from crosstalk."
    ]
   },
   {
