--- a/examples/2_6_extend_framework_bug_identification.ipynb
+++ b/examples/2_6_extend_framework_bug_identification.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extend Janus-CT To Identify Bugs in Quantum Circuit\n",
+    "# Extend QuCT to Identify Bugs in Quantum Circuit\n",
     "\n",
-    "**Author:** Congliang Lang \\& Siwei Tan  \n",
+    "**Author:** Congliang Lang & Siwei Tan  \n",
     "\n",
     "**Date:** 15/4/2024\n",
     "\n",
-    "Based on \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features (MICRO 2023][1]\"\n",
+    "Based on paper \"[QuCT: A Framework for Analyzing Quantum Circuit by Extracting Contextual and Topological Features][1]\" (MICRO 2023)\n",
     "\n",
-    "[1]: https://scholar.google.com/scholar_url?url=https://dl.acm.org/doi/abs/10.1145/3613424.3614274%3Fcasa_token%3DffjIB1hQ4ZwAAAAA:8MajDLrDOC74WoeMf7r7AoQ-koxCa4E1TNqQg3GSDz03xUX6XdE3toNTM-YdM_e4rKEusMceJ6BGJg&hl=zh-CN&sa=T&oi=gsb&ct=res&cd=0&d=11146218754516883150&ei=42YSZpPlFL6s6rQPtt6x6Ac&scisig=AFWwaeYaiu2hyx8HUJ_7Buf9Mwom\n",
+    "[1]: https://dl.acm.org/doi/10.1145/3613424.3614274\n",
     "\n",
-    "The vectorization of Janus-CT can be extended to more downstream tasks. For example, in this notebook, we use Janus-CT to identify the potential bugs in the quantum algorithm implementation. We apply a data driven method that traing a model to predict the error rate "
+    "The vectorization of QuCT can be extended to more downstream tasks. For example, in this notebook, we use QuCT to identify the potential bugs in the quantum algorithm implementation. We apply a data driven method that traing a model to predict the error rate "
    ]
   },
   {
@@ -154,14 +154,14 @@
     "Since a gate vector involves multiple paths, it can be viewed as an abstraction of a module in the circuit. To infer the functionality of a given gate, we first calculate the distance between the vector of this gate and the vector in the standard vector list. We label their functionalities to this gate if distances are below a threshold. \n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-6.detect_bug.jpg\"  width=\"60%\" height=\"60%\">\n",
+    "    <img src=\"../picture/2_6_detect_bug.jpg\"  width=\"60%\" height=\"60%\">\n",
     "</div>\n",
     "\n",
     "For example, the figure above illustrates the distances between the vector of the CZ gate in the third layer and four standard vectors from the dataset. By setting a threshold of 0.7, this CZ gate is labeled with QFT and Quantum support vector machine~(QSVM) functionality.\n",
     "\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-6.algorithm.png\"  width=\"60%\" height=\"60%\">\n",
+    "    <img src=\"../picture/2_6_algorithm.png\"  width=\"60%\" height=\"60%\">\n",
     "</div>\n",
     "\n",
     "After labeling all gates in the circuit, we then apply Algorithm 1 to detect the gates that may exhibit bugs. Assuming that bugs only occur in a sub-circuit, we define a parameter $N_b$ as the maximum number of gates that can be involved in a bug. For each gate vector, we first regard it as a bug (line 1-2). We then collect the neighboring gates $G_{nb}$ that can be visited within ($N_b+1$) steps (line 3). The functionality that is shared by the most gates in $G_{nb}$ is denoted as $m_func$ (line 4).\n",
@@ -177,7 +177,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def construct_negatives(circuit: Circuit, n_error_gates:int, basis_gates):\n",
     "    '''\n",
     "    description: construct bug circuit\n",
@@ -330,13 +329,6 @@
     "\n",
     "    print(str.format(\"algrithm: {}, identify_rate: {}\", error_circuit.name, correct_rate * 100 / len(error_gate_indices)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
