--- a/examples/5_1_solve_sat_domain_problem.ipynb
+++ b/examples/5_1_solve_sat_domain_problem.ipynb
@@ -4,27 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving 3-SAT Problem with Hybrid Quantum-Classical solver \n",
+    "# Solving 3-SAT Problem with Hybrid Quantum-classical Solver \n",
     "\n",
-    "**Author:** Xinghui Jia \\& Siwei Tan\n",
+    "**Author:** Xinghui Jia & Siwei Tan\n",
     "\n",
     "**Date:** 9/4/2024\n",
     "\n",
-    "Based on paper \"[Janus-CT: A Hybrid Approach for 3-SAT Problems by Integrating Quantum Annealer with CDCL][1]\"\n",
+    "Based on paper \"[HyQSAT: A Hybrid Approach for 3-SAT Problems by Integrating Quantum Annealer with CDCL][1]\" (HPCA 2023)\n",
     "\n",
-    "[1]: https://ieeexplore.ieee.org/abstract/document/10071022/\n",
+    "[1]: https://ieeexplore.ieee.org/document/10071022\n",
     "\n",
     "\n",
     "A propositional satisfiability (SAT) problem is to find an assignment for each variable to satisfy a given Boolean formula. A typical SAT problem is composed of multiple clauses represented as a disjunction of Boolean variables. 3-SAT problem is a special case of the SAT problem that has no more than three variables in each clause. \n",
     "\n",
-    "3-SAT problem is a fundamental problem in various applications, such as artificial intelligence, circuit analysis, and protein structure prediction. Since the 3-SAT problem is an NP-complete problem, the time complexity of classical algorithms increases exponentially with the number of clauses and variables. We observe that the classical CDCL algorithm has the advantage of solving larger problems, while QA is more suitable for solving small but hard problems. To combine their advantages, we introduce Janus-SAT in this notebook, a hybrid approach that integrates quantum annealing (QA) with the classical Conflict-Driven Clause Learning (CDCL) algorithm to enable end-to-end acceleration for solving 3-SAT problems. \n",
+    "3-SAT problem is a fundamental problem in various applications, such as artificial intelligence, circuit analysis, and protein structure prediction. Since the 3-SAT problem is an NP-complete problem, the time complexity of classical algorithms increases exponentially with the number of clauses and variables. We observe that the classical CDCL algorithm has the advantage of solving larger problems, while QA is more suitable for solving small but hard problems. To combine their advantages, we introduce HyQSAT in this notebook, a hybrid approach that integrates quantum annealing (QA) with the classical Conflict-Driven Clause Learning (CDCL) algorithm to enable end-to-end acceleration for solving 3-SAT problems. \n",
     "\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"./pictures/4-1.hyqsat.png\"  width=\"45%\" height=\"45%\">\n",
+    "    <img src=\"../picture/5_1_hyqsat.png\"  width=\"45%\" height=\"45%\">\n",
     "</div>\n",
     "\n",
-    "The figure above shows the workflow of Janus-CT. It features a cross-iterative process. The CDCL algorithm searches for the solution. During the search, it identifies and sends the hard sub-problem to QA. Janus-CT designed a fast compilation flow to embed the problem and optimize the noise. It also designs multiple strategies to guide the search of CDCL using the QA results."
+    "The figure above shows the workflow of QuCT. It features a cross-iterative process. The CDCL algorithm searches for the solution. During the search, it identifies and sends the hard sub-problem to QA. QuCT designed a fast compilation flow to embed the problem and optimize the noise. It also designs multiple strategies to guide the search of CDCL using the QA results."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Janus-SAT API to Solve the Problem\n",
+    "### Using HyQSAT API to Solve the Problem\n",
     "\n",
     "We can use a QA simulator or real-world QA hardware to solve the SAT roblem. For example, here we use the simualtor."
    ]
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "# solve by Janus-SAT\n",
+    "# solve by HyQSAT\n",
     "solve_by_janusct(file_path, verb=True, cpu_lim=cpu_lim, mem_lim=mem_lim)"
    ]
   },
@@ -106,14 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that when using the simulator, the solving time is estimated as (CDCL time + number of QA $\\times$ 20 $\\mu s$)."
+    "Note that when using the simulator, the solving time is estimated as (CDCL time + number of QA $\\times$ 120 $\\mu s$)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparision to MiniSAT\n",
+    "### Comparison to MiniSAT\n",
     "\n",
     "We compare it to the MiniSAT solver."
    ]
@@ -309,13 +309,6 @@
     "df = pd.DataFrame(all_result)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
